Update project files for deployment

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Daily Polygon Community</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.e6c13ad2.css">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <script defer="defer" src="%PUBLIC_URL%/static/js/main.474cafc3.js"></script>
 
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    
 </head>
 <body>
     <div id="root"></div>
 </body>
 </html>
+
