--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Daily Polygon Community</title><link rel="stylesheet" href="./static/css/main.e5f860ae.css"><link rel="icon" href="./favicon.ico"/><script defer="defer" src="./static/js/main.87a8354a.js"></script><script defer="defer" src="/pro/static/js/main.a565e7eb.js"></script><link href="/pro/static/css/main.1dc853c6.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Daily Polygon Community</title>
+  
+  <link rel="stylesheet" href="/pro/static/css/main.1dc853c6.css">
+  <link rel="icon" href="/pro/favicon.ico"/>
+ 
+  <script defer="defer" src="/pro/static/js/main.a565e7eb.js"></script>
+</head>
+<body>
+  <div id="root"></div>
+</body>
+</html>
